--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
-<%= form_for [@project, @review] do |f| %>
+<%= form_for @review do |f| %>
   <%= f.label :content %>
   <%= f.text_field :content %>
-  <%= f.hidden_field :project_id , value: params[:project_id] %>
+  <%= f.hidden_field :project_id , value: @project.id %>
 
   <%= f.submit "Submit" %>
 <% end %>
