--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,6 +3,6 @@
 <%= @project.description %><br /><br />
 
 <% @reviews.each do |review| %>
-  <%= review.content %><br />
+  <%= link_to review.content, review %><br />
 <% end %>
 <%= link_to 'new review', new_review_path(@project) %>
